# aide-de-camp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  cog.toml  flake.nix  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: pr-build.yaml
aide-de-camp/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
aide-de-camp-core/: Cargo.toml
aide-de-camp-core/src/: error.rs  job.rs  lib.rs  mixins.rs  queue.rs  runner.rs
aide-de-camp-cron/: Cargo.toml
aide-de-camp-cron/src/: lib.rs  store.rs
aide-de-camp-sqlite/: Cargo.toml  README.md  schema.hcl  sqlx-data.json
aide-de-camp-sqlite-bench/: Cargo.toml
aide-de-camp-sqlite-bench/src/: main.rs
aide-de-camp-sqlite/migrations/: 20221015223453_initial_schema.sql  20221015224053_add_priority.sql
aide-de-camp-sqlite/sql/: schema.sql
aide-de-camp-sqlite/src/: job_handle.rs  lib.rs  queue.rs  types.rs
aide-de-camp/src/: core.rs  job_runner.rs  lib.rs
aide-de-camp/src/core/: job_handle.rs  job_processor.rs  queue.rs
aide-de-camp/src/runner/: job_router.rs  job_runner.rs  wrapped_job.rs
