[package]
name = "aide-de-camp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
anyhow = "1.0.53"
bincode = "2.0.0-beta.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }
async-trait = "0.1.52"
chrono = "0.4"
xid = "1.0.0"
bytes = "1.1.0"
tracing = "0.1.30"
