[package]
name = "aide-de-camp-cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
chrono = "0.4"
aide-de-camp = { path = "../aide-de-camp", version = "0.1.1", features = ["runner"] }
anyhow = "1.0.65"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
