[package]
name = "aide-de-camp-sqlite-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-beta.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }
aide-de-camp = { path = "../aide-de-camp", version = "0.1.0" }
sqlx = {version = "0.5.13", default-features = false , features = ["sqlite", "macros", "chrono"]}
futures = "0.3.21"