[package]
name = "aide-de-camp-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide-de-camp-core = { path = "../aide-de-camp-core", version = "0.1.0" }
sqlx = {version = "0.5.13", default-features = false , features = ["sqlite", "macros", "chrono"]}
bincode = "2.0.0-beta.2"
tracing = "0.1.30"

[dev-dependencies]
tracing-subscriber = "0.3.8"

[features]
default = ["native-tls"]
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls"]