[package]
name = "aide-de-camp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide-de-camp-core = { path = "../aide-de-camp-core", version = "0.1.0" }
aide-de-camp-sqlite = { path = "../aide-de-camp-sqlite", version = "0.1.0" }
tracing = "0.1.30"
rand = "0.8.5"
